--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -52,7 +52,7 @@ jobs:
         run: |
           helm repo add stable https://kubernetes-charts.storage.googleapis.com/
 
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.0.0-alpha.2
-        env:
-          CR_TOKEN: "${{ secrets.CR_TOKEN }}"
+      # - name: Run chart-releaser
+      #   uses: helm/chart-releaser-action@v1.0.0-alpha.2
+      #   env:
+      #     CR_TOKEN: "${{ secrets.CR_TOKEN }}"
