--- a/ct.yaml
+++ b/ct.yaml
@@ -2,5 +2,6 @@
 remote: origin
 chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
+  - kong=https://charts.konghq.com
 helm-extra-args: --timeout 200
 check-version-increment: false
