--- a/kong-values.yaml
+++ b/kong-values.yaml
@@ -1,8 +1,8 @@
 image:
-  repository: kong-docker-kong-enterprise-edition-internal-preview-docker.bintray.io/kong-enterprise-edition
+  repository: kong-docker-kong-enterprise-edition-docker.bintray.io/kong-enterprise-edition
   tag: 1.5.0.0-alpine
   pullSecrets:
-  - kong-enterprise-docker-preview
+  - kong-enterprise-docker
 
 enterprise:
   enabled: true
@@ -44,7 +44,7 @@ env:
   password:
     valueFrom:
       secretKeyRef:
-        name: kong-admin-token-secret
+        name: kong-admin-token-secret-just-got-more-secret
         key: kong-admin-token
   enforce_rbac: "on"
   admin_gui_auth: basic-auth
