--- a/.github/workflows/non-master.yaml
+++ b/.github/workflows/non-master.yaml
@@ -29,10 +29,10 @@ jobs:
 
       - name: Add prerequisites
         run: |
+          helm repo add kong https://charts.konghq.com
+          helm repo update
           helm install my-kong kong/kong --version 1.3.0 -f kong-values.yaml
           kubectl create secret generic kong-admin-token-secret --from-literal=kong-admin-token=my-token
-          docker pull kong-docker-kong-brain-immunity-base.bintray.io/kong-brain-immunity:1.2.1
-          kind load docker-image kong-docker-kong-brain-immunity-base.bintray.io/kong-brain-immunity:1.2.1
 
       - name: Run chart-testing (install)
         uses: helm/chart-testing-action@v1.0.0-alpha.3
