--- a/ct.yaml
+++ b/ct.yaml
@@ -1,5 +1,7 @@
 # See https://github.com/helm/chart-testing#configuration
 remote: origin
+chart-dirs:
+  - charts
 chart-repos:
   - bitnami=https://charts.bitnami.com/bitnami
   - kong=https://charts.konghq.com
