--- a/charts/kong-collectorapi/values.yaml
+++ b/charts/kong-collectorapi/values.yaml
@@ -1,10 +1,10 @@
 image:
-  repository: kong-docker-kong-brain-immunity-base.bintray.io/kong-brain-immunity
+  repository: kong-docker-kong-immunity-base.bintray.io/kong-immunity
   tag: 4.0.0
   pullPolicy: IfNotPresent
 
 imagePullSecrets:
-  - name: kong-brain-immunity-docker
+  - name: kong-immunity-docker
 
 waitImage:
   repository: busybox
