This will pull-in docker credentials for bintray from ExternalSecrets

--- a/charts/kong-collectorapi/values.yaml
+++ b/charts/kong-collectorapi/values.yaml
@@ -63,3 +63,7 @@ redis:
 
 ingress:
   enabled: false
+
+exteralSecrets:
+  enabled: false
+  path: /cloud.konghq.com/dockerhub/kongcloud/dockerconfigjson
