--- a/charts/collector/templates/collector-service.yaml
+++ b/charts/collector/templates/collector-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "kong-collectorapi.fullname" . }}
+  name: {{ include "collector.fullname" . }}
   annotations: {}
   creationTimestamp: null
   labels:
-    {{- include "kong-collectorapi.metaLabels" . | nindent 4 }}
+    {{- include "collector.metaLabels" . | nindent 4 }}
     app.kubernetes.io/component: app
 spec:
   type: {{ .Values.collector.service.type }}
@@ -15,7 +15,7 @@ spec:
       nodePort: {{ .Values.collector.nodePort }}
       {{- end }}
   selector:
-    {{- include "kong-collectorapi.metaLabels" . | nindent 4 }}
+    {{- include "collector.metaLabels" . | nindent 4 }}
     app.kubernetes.io/component: app
 status:
   loadBalancer: {}
