--- a/charts/collector/templates/collector-deployment.yaml
+++ b/charts/collector/templates/collector-deployment.yaml
@@ -26,8 +26,7 @@ spec:
         {{- toYaml . | nindent 8 }}
     {{- end }}
       initContainers:
-      {{- include "kong-collectorapi.wait-for-db" . | nindent 6 }}
-      {{- include "kong-collectorapi.wait-for-redis" . | nindent 6 }}
+      {{- include "collector.wait-for-redis" . | nindent 6 }}
       containers:
       - name: collector
         image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
@@ -42,6 +41,21 @@ spec:
           value: /collector
         - name: SQLALCHEMY_DATABASE_URI
           value: "postgres://{{ .Values.postgresql.postgresqlUsername }}:{{ .Values.postgresql.postgresqlPassword }}@{{ template "collector.postgresql.fullname" . }}:{{ .Values.postgresql.service.port }}/{{ .Values.postgresql.postgresqlDatabase }}"
+        - name: KONG_PROTOCOL
+          value: "{{ .Values.kongAdmin.protocol }}"
+        - name: KONG_HOST
+          value: "{{ .Values.kongAdmin.host }}"
+        - name: KONG_PORT
+          value: "{{ .Values.kongAdmin.servicePort }}"
+        - name: KONG_ADMIN_TOKEN
+          valueFrom:
+            secretKeyRef:
+            {{- if .Values.kongAdmin.existingSecret }}
+              name: {{ .Values.kongAdmin.existingSecret }}
+            {{- else }}
+              name: kong-admin-token-secret
+            {{- end }}
+              key: kong-admin-token
         ports:
         - containerPort: {{ .Values.collector.containerPort }}
         resources: {}
