--- a/charts/collector/values.yaml
+++ b/charts/collector/values.yaml
@@ -32,6 +32,10 @@ collector:
   service:
     type: ClusterIP
     port: 5000
+  # Set this to the number of requests that will remain in the PostGresDB post daily cleaning
+  max_har_storage: 2000000
+  # Set this to the number of consequetive minutes of abnormal traffic needed to triggerr a traffic alert
+  traffic_alert_min: 1
 
 postgresql:
   ## Set to false if bringing your own postgresql
