Nevermind we need external secrets for Argo

--- a/charts/collector/values.yaml
+++ b/charts/collector/values.yaml
@@ -64,3 +64,8 @@ redis:
 
 ingress:
   enabled: false
+
+exteralSecrets:
+  enabled: false
+  path: /cloud.konghq.com/dockerhub/kongcloud/dockerconfigjson
+
