--- a/.github/workflows/non-master.yaml
+++ b/.github/workflows/non-master.yaml
@@ -10,6 +10,8 @@ on:
 
 jobs:
   lint-test:
+    env:
+      COMMON_CT_ARGS: "--chart-repos kong=https://charts.konghq.com bitnami=https://charts.bitnami.com/bitnami --remote origin --target-branch master"
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -19,10 +21,12 @@ jobs:
 
       - name: Set up Helm
         uses: azure/setup-helm@v1
+        with:
+          version: v3.4.0
 
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: 3.7
 
       - name: Set up chart-testing
         uses: helm/chart-testing-action@v2.0.1
@@ -36,14 +40,11 @@ jobs:
           fi
 
       - name: Run chart-testing (lint)
-        run: ct lint --config ct.yaml
-        if: steps.list-changed.outputs.changed == 'true'
+        run: ct lint $COMMON_CT_ARGS --check-version-increment=false
 
       - name: Create kind cluster and install
+        if: steps.list-changed.outputs.changed == 'true'
         env:
           KONG_LICENSE_DATA: ${{ secrets.LICENSE }}
-          BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
-          BINTRAY_KEY: ${{ secrets.BINTRAY_KEY }}
         run: |
           bash .github/workflows/e2e-kind.sh
-
