--- a/.github/workflows/master.yaml
+++ b/.github/workflows/master.yaml
@@ -42,30 +42,30 @@ jobs:
           KONG_LICENSE_DATA: ${{ secrets.LICENSE }}
         run: |
           bash .github/workflows/e2e-kind.sh
-  release:
-    needs: lint-test
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+  # release:
+  #   needs: lint-test
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v2
 
-      - name: Fetch history
-        run: git fetch --prune --unshallow
+  #     - name: Fetch history
+  #       run: git fetch --prune --unshallow
 
-      - name: Configure Git
-        run: |
-          git config user.name "$GITHUB_ACTOR"
-          git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-      # See https://github.com/helm/chart-releaser-action/issues/6
-      - name: Set up Helm
-        uses: azure/setup-helm@v1
-        with:
-          version: v3.2.4
+  #     - name: Configure Git
+  #       run: |
+  #         git config user.name "$GITHUB_ACTOR"
+  #         git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
+  #     # See https://github.com/helm/chart-releaser-action/issues/6
+  #     - name: Set up Helm
+  #       uses: azure/setup-helm@v1
+  #       with:
+  #         version: v3.2.4
 
-      - name: Add dependency chart repos
-        run: |
-          helm repo add bitnami https://charts.bitnami.com/bitnami
-      - name: Run chart-releaser
-        uses: helm/chart-releaser-action@v1.1.0
-        env:
-          CR_TOKEN: "${{ secrets.CR_TOKEN }}"
+  #     - name: Add dependency chart repos
+  #       run: |
+  #         helm repo add bitnami https://charts.bitnami.com/bitnami
+  #     - name: Run chart-releaser
+  #       uses: helm/chart-releaser-action@v1.1.0
+  #       env:
+  #         CR_TOKEN: "${{ secrets.CR_TOKEN }}"
