--- a/charts/collector/values.yaml
+++ b/charts/collector/values.yaml
@@ -17,11 +17,7 @@ kongAdmin:
   # Set this to the Kong Admin API protocol
   protocol: http
   # Set this to the Kong Admin API token / KONG_PASSWORD
-  token:
-    valueFrom:
-      secretKeyRef:
-        name: kong-admin-token-secret
-        key: kong-admin-token
+  token: handyshake
   # Set this to override the name of the secret above
   # existingSecret: kong-admin-token-secret
 
